--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "result-core",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "minimal result reification",
-  "dependencies": {},
+  "dependencies": {
+    "inherit": "http://github.com/nathan7/inherit/tarball/f1a75b4844",
+    "result-type": "1.0.0"
+  },
   "devDependencies": {},
   "repository": {
     "type": "git",
